llvm/test/CodeGen/MIR/AMDGPU/preload-kernarg-invalid-register-class-error.mir
# RUN: not llc -mtriple=amdgpu9.50-amd-amdhsa -run-pass=none -filetype=null %s 2>&1 | FileCheck %s

---
# CHECK: error: {{.*}} incorrect register class for field
name: kernarg_preload_wrong_register_class
tracksRegLiveness: true
machineFunctionInfo:
  explicitKernArgSize: 4
  maxKernArgAlign: 4
  numKernargPreloadSGPRs: 1
  isEntryFunction: true
  argumentInfo:
    kernargSegmentPtr: { reg: '$sgpr0_sgpr1' }
    firstKernArgPreloadReg: { reg: '$vgpr0' }  # ERROR: VGPR instead of SGPR
body: |
  bb.0:
    S_ENDPGM 0
...
